add automatically creating report when system record violations