@@ -1,23 +1,34 @@
 package com.kt.social.domain.moderation.service;
 
-import com.kt.social.domain.moderation.model.ModerationLog;
-import com.kt.social.domain.comment.repository.CommentRepository;
+import com.kt.social.domain.moderation.dto.ModerationResult;
 import com.kt.social.domain.moderation.event.ContentCreatedEvent;
+import com.kt.social.domain.moderation.model.ModerationLog;
 import com.kt.social.domain.moderation.repository.ModerationLogRepository;
-import com.kt.social.domain.notification.service.NotificationService;
-import com.kt.social.domain.post.repository.PostRepository;
 import com.kt.social.domain.react.enums.TargetType;
-import com.kt.social.infra.ai.AiServiceClient; // Giả sử service này có hàm checkToxic trả về DTO
+import com.kt.social.domain.report.enums.ReportReason;
+import com.kt.social.domain.report.enums.ReportStatus;
+import com.kt.social.domain.report.model.Report;
+import com.kt.social.domain.report.repository.ReportRepository;
+import com.kt.social.domain.comment.model.Comment;
+import com.kt.social.domain.comment.repository.CommentRepository;
+import com.kt.social.domain.notification.service.NotificationService;
+import com.kt.social.domain.post.model.Post;
+import com.kt.social.domain.post.repository.PostRepository;
+import com.kt.social.infra.ai.AiServiceClient;
 import com.kt.social.infra.storage.StorageService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.event.TransactionPhase;
 import org.springframework.transaction.event.TransactionalEventListener;
 
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 @Component
 @RequiredArgsConstructor
@@ -28,105 +39,166 @@ public class ContentModerationListener {
     private final PostRepository postRepository;
     private final CommentRepository commentRepository;
     private final ModerationLogRepository moderationLogRepository;
+    private final ReportRepository reportRepository; // 🔥 THÊM MỚI
     private final StorageService storageService;
     private final NotificationService notificationService;
 
     @Async
+    @Transactional(propagation = Propagation.REQUIRES_NEW) // Tạo transaction riêng biệt
     @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT)
     public void handleContentCreation(ContentCreatedEvent event) {
-        log.info("🤖 AI Scanning content [{}]: {}", event.getTargetType(), event.getTargetId());
+        log.info("🤖 AI Scanning content [{}]: ID {}", event.getTargetType(), event.getTargetId());
 
         try {
-            // 1. KIỂM TRA TEXT (Như cũ)
-            var textResult = aiServiceClient.checkContentToxicity(event.getContent());
-            if (textResult.isToxic()) {
-                handleToxicContent(event, textResult.getReason());
-                return; // Nếu text vi phạm thì phạt luôn, khỏi check ảnh
+            // 1. KIỂM TRA TEXT
+            String textToCheck = event.getContent();
+            if (textToCheck != null && !textToCheck.isBlank()) {
+                ModerationResult textResult = aiServiceClient.checkContentToxicity(textToCheck);
+                if (textResult.isToxic()) {
+                    log.warn("❌ Text Toxic Detected: {}", textResult.getReason());
+                    handleToxicContent(event, textResult.getReason());
+                    return;
+                }
             }
 
-            // 2. KIỂM TRA HÌNH ẢNH (Mới)
-            List<String> mediaUrls = getMediaUrls(event); // Hàm helper lấy list url
+            // 2. KIỂM TRA HÌNH ẢNH
+            List<String> mediaUrls = getMediaUrls(event);
 
-            if (mediaUrls != null && !mediaUrls.isEmpty()) {
+            if (!mediaUrls.isEmpty()) {
                 for (String url : mediaUrls) {
-                    // Chỉ check ảnh, bỏ qua video
                     if (isImage(url)) {
-                        // Đọc bytes từ Storage
-                        byte[] imageBytes = storageService.readFile(url);
-                        if (imageBytes == null) continue;
+                        try {
+                            byte[] imageBytes = storageService.readFile(url);
+                            if (imageBytes == null || imageBytes.length == 0) continue;
 
-                        var imageResult = aiServiceClient.checkImageToxicity(imageBytes, extractFilename(url));
+                            String filename = extractFilename(url);
+                            ModerationResult imageResult = aiServiceClient.checkImageToxicity(imageBytes, filename);
 
-                        if (imageResult.isToxic()) {
-                            handleToxicContent(event, imageResult.getReason());
-                            return; // Phát hiện 1 ảnh xấu là phạt luôn
+                            if (imageResult.isToxic()) {
+                                log.warn("❌ Image Toxic Detected: {}", imageResult.getReason());
+                                handleToxicContent(event, "[Image] " + imageResult.getReason());
+                                return;
+                            }
+                        } catch (Exception ex) {
+                            log.error("⚠️ Failed to check image {}: {}", url, ex.getMessage());
                         }
                     }
                 }
             }
 
-            log.info("✅ Content is clean.");
+            log.info("✅ Content [{} - {}] is clean.", event.getTargetType(), event.getTargetId());
 
         } catch (Exception e) {
-            log.error("❌ Error during AI moderation: {}", e.getMessage());
+            log.error("❌ Error during AI moderation: {}", e.getMessage(), e);
         }
     }
 
     private void handleToxicContent(ContentCreatedEvent event, String reason) {
-        // 2. Cập nhật deletedAt và details
+        Instant now = Instant.now();
+
+        // 1. Xử lý Soft Delete Entity (Post/Comment)
         if (event.getTargetType() == TargetType.POST) {
             postRepository.findById(event.getTargetId()).ifPresent(post -> {
-                post.setDeletedAt(Instant.now());
+                post.setDeletedAt(now);
                 post.setViolationDetails(reason);
                 post.setSystemBan(true);
                 postRepository.save(post);
             });
         } else if (event.getTargetType() == TargetType.COMMENT) {
             commentRepository.findById(event.getTargetId()).ifPresent(comment -> {
-                comment.setDeletedAt(Instant.now());
-//                 comment.setViolationDetails(reason); // Nếu bạn đã thêm field này vào Entity Comment
-//                comment.setSystemBan(true); // Nếu có field này
+                comment.setDeletedAt(now);
+                // comment.setSystemBan(true); // Nếu entity comment có field này
                 commentRepository.save(comment);
-
-                // Giảm count comment của post gốc đi 1 (vì comment bị xóa)
-                // postRepository.updateCommentCount(comment.getPost().getId(), -1);
-                // (Tùy chọn: Có thể làm hoặc không, vì soft delete đôi khi vẫn tính count)
             });
         }
 
-        // 3. Ghi Moderation Log (System Action -> actor = null)
+        // 2. TẠO SYSTEM REPORT (Mới thêm)
+        createSystemReport(event, reason);
+
+        // 3. Ghi Moderation Log
         ModerationLog logEntry = ModerationLog.builder()
                 .targetType(event.getTargetType())
                 .targetId(event.getTargetId().toString())
                 .action("AUTO_BAN")
                 .reason(reason)
-                .actor(null) // System
+                .actor(null) // Null = System
+                .createdAt(now)
                 .build();
         moderationLogRepository.save(logEntry);
 
-        //notificationService.sendNotification(event.getAuthorId(), "Bài viết của bạn đã bị xóa do vi phạm: " + reason);
+        // 4. Gửi thông báo cho User
+//        notificationService.sendNotification(
+//                event.getAuthorId(),
+//                "Nội dung của bạn đã bị xóa do vi phạm tiêu chuẩn cộng đồng: " + reason
+//        );
         log.info("📧 Notification sent to User ID: {}", event.getAuthorId());
     }
 
+    /**
+     * 🔥 Helper: Tạo Report hệ thống để Admin quản lý
+     */
+    private void createSystemReport(ContentCreatedEvent event, String reason) {
+        try {
+            // Kiểm tra xem đã có report hệ thống cho content này chưa (tránh duplicate)
+            boolean exists = reportRepository.existsByTargetIdAndTargetTypeAndIsBannedBySystemIsNotNull(
+                    event.getTargetId(),
+                    event.getTargetType()
+            );
+
+            if (!exists) {
+                Report report = Report.builder()
+                        .targetId(event.getTargetId())
+                        .targetType(event.getTargetType())
+                        .reason(ReportReason.HARASSMENT)
+                        .isBannedBySystem(true)
+                        .createdAt(Instant.now())
+                        .build();
+
+                reportRepository.save(report);
+                log.info("🚩 Created System Report for {} ID {}", event.getTargetType(), event.getTargetId());
+            }
+        } catch (Exception e) {
+            log.error("⚠️ Failed to create system report: {}", e.getMessage());
+            // Không throw exception để tránh rollback việc xoá bài
+        }
+    }
+
     // ---------------------------- Helper Methods ----------------------------
+
     private List<String> getMediaUrls(ContentCreatedEvent event) {
         if (event.getTargetType() == TargetType.POST) {
             return postRepository.findById(event.getTargetId())
-                    .map(post -> post.getMedia().stream()
-                            .map(m -> m.get("url")) // Post lưu List<Map>
-                            .toList())
-                    .orElse(List.of());
+                    .map(Post::getMedia)
+                    .orElse(Collections.emptyList())
+                    .stream()
+                    .map(m -> m.get("url"))
+                    .filter(Objects::nonNull)
+                    .toList();
+        } else if (event.getTargetType() == TargetType.COMMENT) {
+            return commentRepository.findById(event.getTargetId())
+                    .map(Comment::getMedia)
+                    .orElse(Collections.emptyList())
+                    .stream()
+                    .map(m -> m.get("url"))
+                    .filter(Objects::nonNull)
+                    .toList();
         }
-        // Comment tương tự...
-        return List.of();
+        return Collections.emptyList();
     }
 
     private boolean isImage(String url) {
+        if (url == null) return false;
         String lower = url.toLowerCase();
-        return lower.endsWith(".jpg") || lower.endsWith(".jpeg") || lower.endsWith(".png") || lower.endsWith(".webp");
+        return lower.endsWith(".jpg") || lower.endsWith(".jpeg") || lower.endsWith(".png")
+                || lower.endsWith(".webp") || lower.endsWith(".bmp");
     }
 
     private String extractFilename(String url) {
-        return url.substring(url.lastIndexOf("/") + 1);
+        if (url == null || !url.contains("/")) return "unknown.jpg";
+        String filename = url.substring(url.lastIndexOf("/") + 1);
+        if (filename.contains("?")) {
+            filename = filename.substring(0, filename.indexOf("?"));
+        }
+        return filename;
     }
 }
